refactor : 1. 문자열 StringUtils로 변경 및, 그에 따른 dependency추가, 2. exception 변경 3. sync관련 false변경문 삭제 4. summonerHistoryDto Null인경우 반복문 타지 않도록 수정